# watts_vision

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  compose.yaml  hacs.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  lint.yml  validate.yml
bruno/: .env.example  01-login.bru  02-smart-homes.bru  03-devices.bru  04-current-program.bru  bruno.json  collection.bru
config/: configuration.yaml
custom_components/watts_vision/: __init__.py  binary_sensor.py  central_unit.py  climate.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  icons.json  manifest.json  number.py  runtime.py  sensor.py  watts_api.py
custom_components/watts_vision/api/: __init__.py  auth.py  client.py  const.py  exceptions.py  models.py
custom_components/watts_vision/hub/: central_unit.py
custom_components/watts_vision/translations/: en.json  nl.json
docs/: api.md  home-assistant.md
scripts/: develop
tests/: conftest.py  test_api.py  test_climate.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_number.py  test_source.py
