[project]
name = "watts-vision-dev"
version = "0.7.0"
requires-python = ">=3.14.2,<3.15"
dependencies = []

[dependency-groups]
lint = [
    "pre-commit==4.6.0",
    "ruff==0.15.22",
]

[tool.uv]
package = false
required-version = "==0.11.29"
default-groups = ["lint"]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",
    "COM812",
    "D203",
    "D212",
    "ISC001",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.format]
docstring-code-format = true
