[project]
name = "watts-vision-dev"
version = "0.8.0"
requires-python = ">=3.14.2,<3.15"
dependencies = []

[dependency-groups]
lint = [
    "pre-commit==4.6.0",
    "ruff==0.15.22",
]
test = [
    "pytest>=9.0.0,<10",
    "pytest-cov>=7.0.0,<8",
    "pytest-homeassistant-custom-component>=0.13.338",
]

[tool.uv]
package = false
required-version = "==0.11.29"
default-groups = ["lint"]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",
    "COM812",
    "D203",
    "D212",
    "ISC001",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
addopts = "--cov=custom_components.watts_vision --cov-report=term-missing"
asyncio_mode = "auto"
filterwarnings = [
    "error::DeprecationWarning:custom_components\\.watts_vision.*",
    "error::PendingDeprecationWarning:custom_components\\.watts_vision.*",
]
